fixes and improvements

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,7 +17,19 @@ PAYSTACK_BASE_URL=https://api.paystack.co
 STRIPE_SECRET_KEY=your-stripe-secret-key
 
 # Production Database (Example for Supabase)
-# DATABASE_URL=postgresql://user:password@db.project.supabase.co:5432/postgres?sslmode=require
+# IMPORTANT: Use Transaction Mode pooler (port 6543) to avoid connection limits
+# Session Mode (port 5432) has strict client limits - use only for pgAdmin/tools
+# 
+# Transaction Mode URL (RECOMMENDED):
+# DATABASE_URL=postgresql://postgres.project:[PASSWORD]@aws-0-us-east-2.pooler.supabase.com:6543/postgres
+#
+# Session Mode URL (NOT RECOMMENDED for apps):
+# DATABASE_URL=postgresql://postgres.project:[PASSWORD]@aws-0-us-east-2.pooler.supabase.com:5432/postgres
+#
+# Direct Connection (No pooling - use only for migrations):
+# DATABASE_URL=postgresql://postgres:[PASSWORD]@db.project.supabase.co:5432/postgres
+#
+# Get your connection string from: Supabase Dashboard > Settings > Database > Connection String
 
 # Example production settings
 # SECRET_KEY=super-secure-random-key-for-production
