--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,20 @@ PAYSTACK_SECRET_KEY=your-paystack-secret-key
 PAYSTACK_BASE_URL=https://api.paystack.co
 STRIPE_SECRET_KEY=your-stripe-secret-key
 
+# Email/SMTP Configuration (Required for email verification)
+# For Gmail: Use App Password (not your regular password)
+# Enable 2FA and create App Password at: https://myaccount.google.com/apppasswords
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM_EMAIL=noreply@invoiq.com
+SMTP_FROM_NAME=InvoIQ
+SMTP_USE_TLS=true
+
+# Frontend URL (for email verification links)
+FRONTEND_URL=http://localhost:3000
+
 # Production Database (Example for Supabase)
 # IMPORTANT: Use Transaction Mode pooler (port 6543) to avoid connection limits
 # Session Mode (port 5432) has strict client limits - use only for pgAdmin/tools
