analytics, improvements and production

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "InvoIQ - AI-Powered Invoice Management",
-  "short_name": "InvoIQ",
+  "name": "InvoYQ - AI-Powered Invoice Management",
+  "short_name": "InvoYQ",
   "description": "Extract invoice data instantly with AI. Save hours of manual data entry and get paid faster.",
   "start_url": "/",
   "display": "standalone",
