--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,13 +19,31 @@ STRIPE_SECRET_KEY=your-stripe-secret-key
 # Email/SMTP Configuration (Required for email verification)
 # For Gmail: Use App Password (not your regular password)
 # Enable 2FA and create App Password at: https://myaccount.google.com/apppasswords
+# NOTE: Gmail requires SMTP_FROM_EMAIL to match SMTP_USER (leave blank to auto-use SMTP_USER)
+# 
+# Gmail settings:
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+#
+# Resend settings (recommended):
+# SMTP_HOST=smtp.resend.com
+# SMTP_PORT=465
+# SMTP_USER=resend
+# SMTP_PASSWORD=your-resend-api-key
+# SMTP_USE_TLS=false
+# SMTP_USE_SSL=true
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
-SMTP_FROM_EMAIL=noreply@invoiq.com
-SMTP_FROM_NAME=InvoIQ
+SMTP_FROM_EMAIL=
+SMTP_FROM_NAME=InvoYQ
 SMTP_USE_TLS=true
+SMTP_USE_SSL=false
 
 # Frontend URL (for email verification links)
 FRONTEND_URL=http://localhost:3000
